@@ -120,7 +120,17 @@ const static long specM6[]=
     specC2, specN2, specO2, specCN, specCO, specNO, specCO2, specEND
   };
 
-void find_W (spec_t rhok, double T, double Te, double Tv, double Estar, double Qbeam, spec_t W) {
+
+
+void write_model_chem_template(FILE **controlfile){
+}
+
+
+void read_model_chem_actions(char *actionname, char **argum, SOAP_codex_t *codex){
+}
+
+
+void find_W (gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Estar, double Qbeam, spec_t W) {
   double N[ns];
   double theta,kf,Ta;
   long k;
@@ -290,7 +300,7 @@ void find_W (spec_t rhok, double T, double Te, double Tv, double Estar, double Q
  * The numerical derivatives depend strongly on the values given to Uref[] within Cycle()
  */ 
 
-void find_dW_dx (spec_t rhok, spec_t mu, double T, double Te, double Tv, double Estar, double Qbeam,
+void find_dW_dx (gl_t *gl, spec_t rhok, spec_t mu, double T, double Te, double Tv, double Estar, double Qbeam,
                   spec2_t dWdrhok, spec_t dWdT, spec_t dWdTe, spec_t dWdTv, spec_t dWdQbeam) {
   long k, s, spec;                    
   spec_t dWdTa;
